Correct incorrect bustage fix that was causing some odd text substitutions in mail messages.  r=jag  sr=alecf, hyatt  b=104693